--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Create React App Sample",
+  "name": "Gogo new tab",
   "author": "Ankit Joshi",
   "version": "1.0.0",
   "description": "Develop productive outlook for your town activities.",
@@ -9,8 +9,8 @@
   },
   "permissions": ["geolocation"],
   "icons": {
-    "16": "logo192.png",
-    "48": "logo192.png",
-    "128": "logo192.png"
+    "16": "./logo192.png",
+    "48": "./logo192.png",
+    "128": "./logo192.png"
   }
 }
